Comment the comment please

--- a/tex/sections/nipopows_velvet_fork/chainsewing_attack.tex
+++ b/tex/sections/nipopows_velvet_fork/chainsewing_attack.tex
@@ -75,10 +75,10 @@ Note that in order to make this attack successful, the adversary has to produce
 only a few superblocks which let her arrogate an arbitrarily large number of blocks. 
 Thus this attack is expected to succeed with overwhelming probability.
 
-@TODO
+%@TODO
 
-Needs to be proven. It is not obvious that the attacker will succeed in high
-probability, since the most important adversarially generated blocks , $a$
-and $a'$, set a limit to the adversarial blocks produced in parallel to the
-honest blocks of subchain $C\{ab\} \cup C\{b:a'\} \cup C\{a':b'\}$ and can
-take part in the suffix proof.
+%Needs to be proven. It is not obvious that the attacker will succeed in high
+%probability, since the most important adversarially generated blocks , $a$
+%and $a'$, set a limit to the adversarial blocks produced in parallel to the
+%honest blocks of subchain $C\{ab\} \cup C\{b:a'\} \cup C\{a':b'\}$ and can
+%take part in the suffix proof.
