--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -243,21 +243,20 @@ update.\\
 \textit{\textbf{Lemma 4.} A velvet suffix proof constructed by an honest player
 cannot contain any thorny block.}\\
 
-\textit{\textbf{Lemma 5.} Let $(\pi_A, \chi_A)$ be a velvet suffix proof
-constructed by adversary and $b_s$ generated at round $r_s$ the most recent
-smooth block in the proof. Then $\forall r: r \leq r_s$ no thorny blocks
-generated at round $r$ can be included in $(\pi_A, \chi_A)$.} \\ 
+\textit{\textbf{Lemma 5.} Let $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$
+be a velvet suffix proof constructed by the adversary and block $b_s$, generate
+at round $r_s$, be the most recent smooth block in the proof. Then $\forall r:r < r_s$
+no thorny blocks generated at round $r$ can be included in $\mathcal{P_A}$.}\\
 \textit{Proof.} By contradiction. Let $b_t$ be a thorny block generated at
-some sound $r_t \leq r_s$. Consider $b_t$ is included in proof. Then, because
-$(\pi_A, \chi_A)$ is a valid chain as for interlink pointers, there exist a
-block $b'$ generated at some round $r'$ such that $r_t \leq r' \leq r_s$,
-which has an interlink pointer to $b_t$. If $b'$ is a smooth block we have
-reached contradiction, since than there can be no interlink pointer to $b_t$
-as it contains only smooth pointers. Now take the case that $b'$ is a thorny
-block. Then because $b'$ was generated in round $r' \leq r_s$, by induction
-there should be a thorny block pointed by $b_s$ which is not possible because
-$b_s$ is a smooth block.
-
+some round $r_t < r_s$. Suppose for contradiction that $b_t$ is included in
+the proof. Then, because $\mathcal{P_A}$ is a valid chain as for interlink
+pointers, there exist a block path made by interlink pointers starting from $b_s$
+and resulting to $b_t$. Let $b'$ be the most recently generated thorny block
+after $b_t$ and before $b_s$ included in $\mathcal{P_A}$. 
+Then $b'$ has been generated at a round $r'$ such that $r_t \leq r' < r_s$. Then
+the block right after block $b'$ in $\mathcal{P_A}$ must be a thorny block since
+it points to $b'$ which is thorny. But $b'$ is the most recent thorny block after
+$b_t$, so we have reached a contradiction.
 \begin{flushright}
 $\square$
 \end{flushright}
