Fix definition, lemma and theorem enumeration

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -15,9 +15,11 @@
 \usepackage{amsthm}
 
 \theoremstyle{plain}
-\newtheorem{thm}{Theorem}[] 
+\newtheorem{thm}{Theorem}[]
 \theoremstyle{definition}
-\newtheorem{defn}[thm]{Definition} 
+\newtheorem{defn}{Definition}
+\theoremstyle{lemma}
+\newtheorem{lemma}{Lemma} 
 
 \begin{document}
 
