--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -237,7 +237,7 @@ for every pointer \textit{p} in \textit{B}'s interlink. Function
 pointer, in essence a pointer to the most recent \emph{smooth velvet}
 for the level denoted by the pointer itself. 
 
-The following two Lemmas come as immediate results from the suggested protocol
+The following Lemmas come as immediate results from the suggested protocol
 update.\\
 
 \begin{lemma}
@@ -266,6 +266,14 @@ $b_t$, so we have reached a contradiction.
 \begin{flushright}
 $\square$
 \end{flushright}
+
+%%%to be proved!
+\begin{lemma}
+	\textit{Let $\mathcal{P_A} = (\pi_\mathcal{A}, \chi_\mathcal{A})$
+	be a velvet suffix proof constructed by the adversary and $k$ the size of
+	$\chi_{\mathcal{A}}$. Then any thorny block included in $\mathcal{P_A}$ will
+	be part of $\chi_{\mathcal{A}}$ with high probability in $k$.}
+\end{lemma}
 
 \vspace{4mm}
 
