--- a/tex/sections/nipopows_velvet_fork/protocol_update.tex
+++ b/tex/sections/nipopows_velvet_fork/protocol_update.tex
@@ -221,7 +221,7 @@ The protocol patch we suggest can be summarized as follows:\\
 to make NIPoPoWs safe under velvet fork conditions we suggest:
 \begin{enumerate}
 \item Strengthen the Honest Majority Assumption so that $2t < (1 - \delta)(n_v-t)$,
-where $n_v$ the percentage of upraded players.
+where $n_v$ is the number of upraded players.
 %%% TODO: also provide short algorithm for the intrlink construction after the patch 
 \item The NIPoPoW protocol under velvet fork works as usual but a miner constructs
 a block's interlink without pointers to thorny blocks.
